# EmpaMed-AI

./: README.md  agent.py  mesop_ui.py  pyproject.toml
models/: SVM_Emotion_Detection_Model.pkl  SVM_Emotion_Detection_Vectoriser.pkl
tools/: description_generator.py  emotion_detector.py  pubmed_tool.py
