[tool.poetry]
name = "empamed-ai"
version = "0.1.0"
description = ""
authors = ["Sathvika Kopalli"]
readme = "README.md"

package-mode = true
packages = [
    {include = "tools"},
    {include = "models"}
    ]

[tool.poetry.dependencies]
python = "^3.11"
langchain-groq = "^0.2.0"
duckduckgo-search = "^6.3.0"
langchain = "^0.3.2"
langchain-community = "^0.3.1"
wikipedia = "^1.4.0"
biopython = "^1.84"
langchain-together = "^0.2.0"
python-dotenv = "^1.0.1"
langchain-core = "^0.3.9"
scikit-learn = "^1.5.2"
mesop = "^0.12.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

